tests/ui/abi/riscv-discoverability-guidance.riscv64.stderr
error[E0703]: invalid ABI: found `riscv-interrupt`
  --> $DIR/riscv-discoverability-guidance.rs:17:8
   |
LL | extern "riscv-interrupt" fn isr() {}
   |        ^^^^^^^^^^^^^^^^^
   |        |
   |        invalid ABI
   |        help: did you mean: `"riscv-interrupt-m"`
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions

error[E0703]: invalid ABI: found `riscv-interrupt-u`
  --> $DIR/riscv-discoverability-guidance.rs:22:8
   |
LL | extern "riscv-interrupt-u" fn isr_U() {}
   |        ^^^^^^^^^^^^^^^^^^^
   |        |
   |        invalid ABI
   |        help: did you mean: `"riscv-interrupt-m"`
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0703`.
